# react-agent

./: .gitignore  Notes.md  README.md  pyproject.toml
data/: extracted_consulting.tuv.com_en_eu-ai-act.txt  extracted_mkdev.me_b_consulting_eu-ai-act.txt  extracted_rhymetec.com_eu-ai-act-compliance_.txt  extracted_www.mondaq.com_unitedstates_new-technology_1443370_the-eu-ai-act-and-obligations-for-companies-operating-in-the-european-union.txt  web_enrich_01__summarize_eu_ai_act_requirements_relevant_for_ai_consulting_.txt  web_enrich_02__list_key_compliance_deadlines_and_enforcement_timeline_menti.txt  web_enrich_03__extract_concrete_compliance_action_items_checklist_steps_for.txt  websearch_eu_ai_act_requirements_for_ai_consulting_companies.txt  websearch_gdpr_compliance_machine_learning_services.txt  websearch_machine_learning_consulting_market_europe_trends.txt
src/data/: test_prompts.json
src/react_agent/: __main__.py  llm_client.py  llm_config.py  run_prompts.py
src/react_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_calculator_adapter.py  test_evaluation.py  test_execute_one_subtask_websearch.py  test_llm_client.py  test_synthesis.py  test_vectorsearch_adapter.py  test_wikipedia_tool.py
tests/DEPRECATED_oldtests/: test_calculator.py  test_subtask_splitter.py  test_tool_executor_integration.py  test_tool_selector.py  test_vector_search.py  test_websearch_tool.py  test_wikipedia_adapter.py
tests/newtests/: run_prompts.py  test_extract_urls.py  test_prompts.json  test_splitter.py  (+7 more)
venv312/: pyvenv.cfg
(+45 files in other folders)
